Fixed strange scrollbar appearance in new question form

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -341,3 +341,7 @@ button[type="submit"]:disabled:hover {
 .backBtn {
 	text-decoration: none !important;
 }
+
+.no-overflow {
+	overflow: hidden;
+}
